# binance-algo-trading

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DOCKER.md  Dockerfile  Makefile  ONBOARDING_RESULTS.md  QUICKSTART.md  README.md  aggregate_klines.py  aggregate_timeframes.py  analyze_eth_timeframes.py  analyze_sweep.py  analyze_sweep_results.py  backtest_detail.py  backtest_detail_pullback.py  backtest_eth_5m_FINAL.py  backtest_multi_fast.py  backtest_multi_strategy.py  backtest_sweep.py  backtest_sweep_pullback.py  compare_timeframes.py  docker-compose.yml  fetch_klines.py  onboarding.py  plot_klines.py  pyproject.toml
backtest_sweep/: Cargo.toml
backtest_sweep_range/: Cargo.toml
backtest_sweep_v2/: Cargo.toml
db/: __init__.py  aggregate_klines.py  apply_champion.py  backfill_trades.py  connection.py  export_sweep_csv.py  fetch_klines.py  import_klines.py  import_sweeps.py  migrate.py  seed_configs.py  sync_trades.py
docs/: ACTIVE_BOTS.md  DB_ACCESS.md  ONBOARDING.md  ONBOARDING_QUICKSTART.md  POSITION_RISK_GUARD_IMPLEMENTATION_PLAN.md  PROJECT_MEMORY.md  STRATEGY.md  STRATEGY_GALAUSDT.md  STRATEGY_ICXUSDT.md  STRATEGY_MANAUSDT.md  STRATEGY_SANDUSDT.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
mcp/: server.py  tools.py
scripts/: aggregate_klines.py  analyze_sweep.py  analyze_sweep_results.py  backtest_detail.py  backtest_detail_pdhl.py  backtest_detail_pullback.py  backtest_sweep.py  backtest_vwap.py  fetch_eth_5m_official.py  fetch_klines.py  filter_overfit.py  onboarding.py  (+1 more)
(+143 files in other folders)
